Test build from binary.