@@ -40,39 +40,21 @@ RUN apt-get update && apt-get install -y r-base r-base-dev libssl-dev libcurl4-o
 
 # Zeppelin
 ENV ZEPPELIN_PORT 8080
-ENV ZEPPELIN_HOME /usr/zeppelin
+ENV ZEPPELIN_HOME /zeppelin
 ENV ZEPPELIN_CONF_DIR $ZEPPELIN_HOME/conf
 ENV ZEPPELIN_NOTEBOOK_DIR $ZEPPELIN_HOME/notebook
 
-RUN echo '{ "allow_root": true }' > /root/.bowerrc
-RUN set -ex \
- && buildDeps=' \
-    git \
-    bzip2 \
-    npm \
- ' \
- && apt-get update && apt-get install -y --no-install-recommends $buildDeps \
- && curl -sL http://archive.apache.org/dist/maven/maven-3/3.5.0/binaries/apache-maven-3.5.0-bin.tar.gz \
-   | gunzip \
-   | tar x -C /tmp/ \
- && git clone https://github.com/apache/zeppelin.git /usr/src/zeppelin \
- && cd /usr/src/zeppelin \
- && dev/change_scala_version.sh "2.11" \
- && MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=1024m" /tmp/apache-maven-3.5.0/bin/mvn clean package -Pspark-2.1 -Pscala-2.11 -DskipTests \
- && tar xvf /usr/src/zeppelin/zeppelin-distribution/target/zeppelin*.tar.gz -C /usr/ \
- && mv /usr/zeppelin* $ZEPPELIN_HOME \
- && mkdir -p $ZEPPELIN_HOME/logs \
- && mkdir -p $ZEPPELIN_HOME/run \
- && apt-get purge -y --auto-remove $buildDeps \
- && rm -rf /var/lib/apt/lists/* \
- && rm -rf /usr/src/zeppelin \
- && rm -rf /root/.m2 \
- && rm -rf /root/.npm \
- && rm -rf /root/.cache/bower \
- && rm -rf /tmp/*
+ENV Z_VERSION="0.7.3"
+ENV LOG_TAG="[ZEPPELIN_${Z_VERSION}]:" \
+    Z_HOME="/zeppelin" \
+    LANG=en_US.UTF-8 \
+    LC_ALL=en_US.UTF-8
 
-RUN ln -s /usr/bin/pip3 /usr/bin/pip \
- && ln -s /usr/bin/python3 /usr/bin/python
+RUN echo "$LOG_TAG Download Zeppelin binary" && \
+    wget -O /tmp/zeppelin-${Z_VERSION}-bin-all.tgz http://archive.apache.org/dist/zeppelin/zeppelin-${Z_VERSION}/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    tar -zxvf /tmp/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    rm -rf /tmp/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    mv /zeppelin-${Z_VERSION}-bin-all ${Z_HOME}
 
 ADD about.json $ZEPPELIN_NOTEBOOK_DIR/2BTRWA9EV/note.json
 WORKDIR $ZEPPELIN_HOME
